--- a/CoToLive/app/src/main/res/xml/network_security_config.xml
+++ b/CoToLive/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">10.0.2.2</domain>
+        <domain includeSubdomains="true">https://342e0955.r19.cpolar.top</domain>
     </domain-config>
 </network-security-config>
